# winproc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  functions.cmake  resources.rc
src/: main.cpp
src/cli/: CliApp.cpp  CliApp.hpp  Formatter.cpp  Formatter.hpp
src/cli/commands/: CommandHandlers.cpp  CommandHandlers.hpp
src/core/: Convert.cpp  Convert.hpp  NtUtils.cpp  NtUtils.hpp  ProcessUtils.cpp  ProcessUtils.hpp
src/utils/: Defer.hpp  Error.cpp  Error.hpp  Format.cpp  Format.hpp  Result.hpp  ScopeExit.hpp  StringUtils.cpp  StringUtils.hpp  WinError.hpp  source_location.h
